# rider_crawl_baemin

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  config.json  pyproject.toml  response.txt  response_remote_admin.html  response_remote_agents.html  response_remote_auth_required.html  response_remote_target.html  response_remote_targets.html  rider_crawl_exe_entry.py  rider_crawl_onefile.spec
.codex/: hooks.json
.github/workflows/: production-health.yml  test.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-기준선-branch-tag와-설정-백업-생성.md  1-2-pytest-기준선-실행과-결과-분류-보관.md  1-3-공용-redaction-유틸-추가-및-검증.md  1-4-기존-2탭-수동-회귀-시나리오-문서화.md  1-5-기존-자산-재사용-경계와-금지-행위-명문화.md  2-1-uisettings에-고객-대상-id-부여와-legacy-alias-보존.md  2-2-대상별-상태-경로-분리와-atomic-write-로그-rotation.md  2-3-플랫폼-중립-target-필드-통일.md  2-4-secret-값-분리-설정-파일은-ref만-보관.md  2-5-핵심-도메인-모델과-상태-enum-정의.md  2-6-구독-실행-게이트-중지-고객의-작업-차단.md  2-7-기존-탭-설정의-안전한-마이그레이션-실행.md  3-1-run-once를-수집-렌더-전송-서비스로-분리.md  3-2-snapshot-정의와-필수-데이터-누락-시-fail-closed.md  3-3-message-정의와-안정적-렌더링-분리.md  3-4-deliveryrule-fan-out-한-대상에서-여러-채널로.md  3-5-deliverylog와-idempotency-crash-after-send에도-중복-차단.md  3-6-수집-실패와-전송-실패-분리-재시도-실패-상태-관리.md  3-7-telegram-중앙-전송-도입.md  3-8-신규-경로-dry-run-비교와-승인-후-활성화.md  4-1-rider-agent-패키지-생성과-기존-도메인-재사용.md  4-2-등록-코드-입력과-agent-토큰-보안-저장.md  4-3-agent-heartbeat-보고.md  4-4-outbound-https-job-polling-claim-complete와-lease.md  4-5-browserprofilemanager-chrome-프로필-cdp-격리와-대상-검증.md  4-6-kakaosenderworker-fifo-직렬-전송과-정확한-채팅방-검증.md  4-7-agent-실행-조건과-재부팅-후-자동-시작.md  4-8-배민-인증-필요-감지와-사람-개입형-재인증.md  4-9-쿠팡-gmail-2fa-메일함-분리와-lock.md  5-1-fastapi-백엔드-스캐폴딩과-헬스-버전-메트릭-엔드포인트.md  5-10-100-fake-target-부하-smoke와-negative-safety-test.md  5-11-admin-엔티티-생성-편집-crud-ui.md  5-2-postgresql-13-테이블-스키마와-alembic-마이그레이션.md  5-3-queuebackend-추상화와-postgresql-job-queue.md  5-4-scheduler-interval-jitter-circuit-breaker와-구독-게이트.md  5-5-telegram-webhook과-채널-등록-검증-활성화.md  5-6-admin-운영-대시보드와-상태-심각도-표시.md  5-7-admin-수동-운영-액션과-고객-구독-상태-전이.md  5-8-audit-log와-admin-접근-보안.md  5-9-7개-모니터링-지표-알림과-운영-runbook.md  (+6 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-06-13.md
_bmad-output/story-automator/: complexity-orchestration-1-20260612-161321.json  init-log-20260612T160056Z.md  learnings.md  orchestration-1-20260612-161321.md  preflight-1-20260612T160643Z.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/automator/: config.yaml  module-help.csv
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml  module-help.csv
_bmad/core/: config.yaml
_bmad/tea/: config.yaml  module-help.csv
deploy/: Dockerfile.server  docker-compose.dev-public-admin.yml  docker-compose.yml
deploy/cloudwatch/: push_metrics.sh  rider-metrics.service
docs/: coupang-gmail-2fa-implementation.md  kakao-verification-checklist.md  module-architecture.md  project-current-state-and-structure.md  rider-performance-bot-spec.md  session-history-2026-05-21.md  troubleshooting-crawl-stops.md
migrations/: env.py
scripts/: check_db_connection_budget.py  dev_admin_ui.py  gmail_authorize.py  ops_db_tunnel.ps1  production_deploy_preflight.sh  production_health_check.sh  test.ps1
tests/: conftest.py  test_app.py  test_architecture.py  test_baemin_history_rows.py  test_baemin_parser.py  test_baseline_artifacts.py  test_browser_launcher.py  test_codes.py  test_config.py  test_coupang_crawler.py  test_coupang_email_2fa.py  test_coupang_message.py  test_coupang_parser.py  test_crawler.py  test_gmail_2fa.py  test_imap_2fa.py  test_kakao_db.py  test_keyword_responder.py  test_lock.py  test_log_rotation.py  test_manual_regression_runbook.py  test_message.py  test_parser.py  test_project_current_state_doc.py  test_pytest_baseline_artifacts.py  test_redaction.py  test_reuse_boundaries_doc.py  test_rider_lookup_command.py  test_scheduler.py  test_secret_store.py  test_sender.py  test_telegram_commands.py  test_telegram_sender.py  test_ui_helpers.py  test_ui_settings.py
(+563 files in other folders)
