[project]
name = "rider-crawl"
version = "0.1.0"
description = "Baemin delivery history crawler and Telegram text bot"
requires-python = ">=3.10"
dependencies = [
  "crawl4ai==0.8.7",
  "playwright==1.60.0",
  "python-dotenv>=1.1.0",
  "pyperclip>=1.9.0",
  "pyautogui>=0.9.54",
  "pywinauto>=0.6.8; platform_system == 'Windows'",
  "IMAPClient>=3.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:The 'strip_cdata' option of HTMLParser\\(\\) has never done anything and will eventually be removed\\.:DeprecationWarning:lxml.html",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rider_crawl"]
