[project]
name = "rider-crawl"
version = "0.1.0"
description = "Baemin delivery history crawler and Telegram text bot"
requires-python = ">=3.10"
dependencies = [
  "crawl4ai==0.8.7",
  "playwright==1.60.0",
  "python-dotenv>=1.1.0",
  "pyperclip>=1.9.0",
  "pyautogui>=0.9.54",
  "pywinauto>=0.6.8; platform_system == 'Windows'",
  "IMAPClient>=3.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
kakao = [
  # Optional Windows Agent dependency for reading local KakaoTalk SQLCipher DBs.
  "sqlcipher3>=0.6.2",
]
# Cloud 백엔드(rider_server, Epic 5) 전용 의존성. rider_agent 의 7-dep stdlib-only
# 배포 표면을 보호하기 위해 [project].dependencies 와 분리한다(절대 본 deps 에 넣지 말 것).
server = [
  "fastapi>=0.136.0,<0.137.0",
  "uvicorn[standard]>=0.30.0",
  # Epic 5 영속 레이어(Story 5.2): SQLAlchemy 2.x async ORM + Alembic + asyncpg 드라이버.
  # 반드시 server extra 로만 — [project].dependencies(7개 고정)를 건드리지 않는다.
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "alembic>=1.18,<1.19",
  "asyncpg>=0.29",
  # Story 5.6: Admin UI 서버 렌더(Jinja2+HTMX). HTMX 자산은 CDN/정적이라 python 의존 아님.
  # 현재 venv 엔 transitive 로 존재하나 재현 가능 빌드 위해 명시 선언(server extra 만 — main 금지).
  "jinja2>=3.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:The 'strip_cdata' option of HTMLParser\\(\\) has never done anything and will eventually be removed\\.:DeprecationWarning:lxml.html",
  # Starlette 1.3.x TestClient 가 httpx2 권장 — 현재 httpx 로도 정상 동작(검증됨), 경고만 억제.
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rider_crawl", "src/rider_server", "src/rider_agent"]

[tool.hatch.build.targets.wheel.force-include]
migrations = "migrations"
